# scan-sorter

./: .gitignore  README.md  pyproject.toml
src/scan_sorter/: cli.py  sorting.py
